add jar task to gradle